Add lockfile setting

--- a/GameLibrary.UI/GameLibrary.UI.Desktop/GameLibrary.UI.Desktop.csproj
+++ b/GameLibrary.UI/GameLibrary.UI.Desktop/GameLibrary.UI.Desktop.csproj
@@ -21,4 +21,8 @@
     <ItemGroup>
         <ProjectReference Include="..\GameLibrary.UI\GameLibrary.UI.csproj"/>
     </ItemGroup>
+
+    <PropertyGroup>
+        <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+    </PropertyGroup>
 </Project>
