--- a/AppDir/GameLibrary.desktop
+++ b/AppDir/GameLibrary.desktop
@@ -2,6 +2,7 @@
 Type=Application
 Name=Game Library
 Comment=Game Library manager
+Icon=gamelibrary
 Exec=GameLibrary.UI.Desktop
 Path=~
 Terminal=false
